[package]
name = "fc2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35"
rustc-hash = "1.1.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.2.0"

[dev-dependencies]
criterion = "0.3"

[features]
render_sprites = []

[[bench]]
name = "bench_main"
harness = false

